--- a/package.json
+++ b/package.json
@@ -19,31 +19,27 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
-
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.9.4",
-    "lucide-react": "^0.509.0",
-    "node-fetch": "^3.3.2",
-
     "formik": "^2.4.6",
     "framer-motion": "^12.9.4",
     "lucide": "^0.511.0",
-    "lucide-react": "^0.511.0",
-
+    "lucide-react": "^0.509.0",
+    "media-encoder-host": "^9.0.19",
+    "multi-buffer-data-view": "^6.0.21",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.5.1",
-
+    "recorder-audio-worklet": "^6.0.47",
+    "standardized-audio-context": "^25.3.77",
+    "subscribable-things": "^2.1.52",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "ws": "^8.18.2"
-
-    "tailwindcss": "^4.1.4",
+    "ws": "^8.18.2",
     "yup": "^1.6.1"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -54,7 +50,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "tw-animate-css": "^1.2.9",
+    "tw-animate-css": "^1.3.0",
     "vite": "^6.3.1"
   }
 }
