--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@heroicons/react": "^2.2.0",
     "@humeai/voice": "^0.1.10",
     "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.4",
@@ -29,6 +33,7 @@
     "media-encoder-host": "^9.0.19",
     "multi-buffer-data-view": "^6.0.21",
     "node-fetch": "^3.3.2",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
